2003-11-17  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* ParseArgv.c:
	* ParseArgv.h: Remove.  These files are now installed as part of minc.
	
	* Makefile.am (volume_object_evaluate_SOURCES): Remove ParseArgv.c.

2003-10-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* ascii_binary.c: Delete.  This program was moved to package
	bicpl on 2001-04-02 and the former is a prerequisite of this
	package.

	* Makefile.am (bin_PROGRAMS): Remove ascii_binary.

2003-09-08  Jason Lerch    <jason@bic.mni.mcgill.ca>

	* added a -output_binary_mask option to surface_mask2

2003-08-29  Jason Lerch    <jason@bic.mni.mcgill.ca>

	* fixed a bug in surface_mask2 which caused it to fail when the
	histogram of the input volume was skewed and the volume had a
	datatype other than NC_BYTE. Now reads in volume using
	MI_ORIGINAL_TYPE. 

2003-04-30  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* average_objects.c: Completed the code.

2003-03-02  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.ac: Set version to 1.3.

2003-03-02  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	Release 1.2.

	* flatten_polygons.c:
	* fit_curve2.c:
	* colour_object.c:
	* two_surface_resample.c (main): 
	* refine_mesh.c (main): 
	* compute_bounding_view.c (main): 
	* box_filter_volume_nd.c (box_filter_volume): 
	* box_filter_volume.c (main): Remove unused variable declarations.

	* surface_mask2.c: 
	* make_line_links.c: 
	* fit_3d.c: 
	* fit_curve.c: 
	* find_buried_surface.c: Remove unused function declarations.

2003-02-25  Steve ROBBINS  <stever@diomedes.bic.mni.mcgill.ca>

	* surface_mask2.c (main): Return zero on success.

2003-01-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.ac: Set version to 1.2.

2003-01-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.ac: Set version to 1.1.

	* Makefile.am (m4_files): Add m4/smr_CGAL_MAKEFILE.m4.

2002-04-06  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
